# expl2022-webgpu-multithread

./: main.js  package-lock.json  package.json  serve.js  worker.js
1-postmessage/: index.html  main.js  worker.js
2-sharedtable/: main.js  worker.js
2-sharedtable/gpu-command-buffer/: main.js  worker.js
2-sharedtable/render-bundle/: index.html  main.js  worker.js
3-multiencodingbench/: main.js  worker.js
native/: .gitignore  CMakeLists.txt  main.cpp  mat4.cc  mat4.h  server.js  setup_native_build.sh  setup_native_third_party.sh  vec3.h  window.cpp  window.h
